--- a/experiments/github-playground/github-playground.cabal
+++ b/experiments/github-playground/github-playground.cabal
@@ -20,6 +20,7 @@ executable starring
         base >= 4.14 && < 5
       , text
       , github
+      , transformers
       , github-playground
   default-language: Haskell2010
 
@@ -30,5 +31,16 @@ executable unstarring
         base >= 4.14 && < 5
       , text
       , github
+      , github-playground
+  default-language: Haskell2010
+
+executable prompt-starring
+  main-is: PromptStarring.hs
+  hs-source-dirs: Starring
+  build-depends: 
+        base >= 4.14 && < 5
+      , text
+      , github
+      , transformers
       , github-playground
   default-language: Haskell2010
